--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 		kspUniObj=new kspUniverse(),
 		kspSciObj=new kspSci(kspUniObj),
 		kspObj=new kspParser(kspUniObj,kspSciObj),
-		FPSObj=new fpsHandler(5),//for the processing of data and green area messages
+		base_fps=15,
+		FPSObj=new fpsHandler(base_fps),//for the processing of data and green area messages
 		FPSUIObj=new fpsHandler(5),//for the bordered area
 		run_count=0,
 		base_delay=4000,
@@ -137,7 +138,7 @@
 			FPSUIObj.add_callback(ui_lastcallback);}
 	}
 	function declare_finished(){
-		FPSObj.change_fps(5);//reset
+		FPSObj.change_fps(base_fps);//reset
 		tableObj.draw_table(table_target_obj);
 		//try{
 //console.log('altTableObj',altTableObj,'table_target_obj',table_target_obj);
@@ -628,7 +629,7 @@
 
 		};
 		var alt_science_inc=0,
-			alt_table_data={'cols_info':[]};
+			alt_table_data={'cols_info':[],'roid_list':[]};
 		var asteroid_table_line=function(){
 			if(alt_science_inc==0){
 				var body_row=[''],
@@ -637,6 +638,7 @@
 					alt_head_filler_class=[
 						'head-body',//asteroid
 					];
+				
 				for(var b=0;b<celestial_body_arr.length;b++){
 					var planet_data={};
 					kspUniObj.is_celestial_body(celestial_body_arr[b],planet_data);
@@ -711,43 +713,85 @@ console.log('planet_data',planet_data,"\n\n",'sci_rails',$.extend(true,{},sci_ra
 			}
 //return declare_finished();
 
-			//for(var alt_science_inc=0;alt_science_inc<alt_science_arr.length;alt_science_inc++){
-console.log('alt_science_arr['+alt_science_inc+']',alt_science_arr[alt_science_inc]);
-				var _tmp=['roid'];
+			//for(var alt_science_inc=0;alt_science_inc<alt_science_arr.length;alt_science_inc++){//for reference.  This is whats happening inside the FPS loop
+				var alt_sci_list=array_object_search(page_data.parsed_science,'science_ident',alt_science_arr[alt_science_inc].ident),
+					roid_ids=[];
+console.log('alt_science_arr['+alt_science_inc+']',alt_science_arr[alt_science_inc],"\n\n",'alt_sci_list: ',alt_sci_list,"\n\n",'alt_science_arr['+alt_science_inc+']: ',alt_science_arr[alt_science_inc],'== asteroid_sample_ident: ',asteroid_sample_ident);
+				if(alt_science_arr[alt_science_inc].ident==asteroid_sample_ident){
+					for(var rt=0;rt<alt_sci_list.length;rt++){
+						if(alt_sci_list[rt].meta.asteroid_ident!==false && $.inArray(alt_sci_list[rt].meta.asteroid_ident,roid_ids)===-1){
+							alt_table_data.roid_list.push(alt_sci_list[rt].meta.asteroid_ident);
+							roid_ids.push(alt_sci_list[rt].meta.asteroid_ident);
+						}
+					}
+				}
+/*
+for(var al=0;al<alt_table_data.roid_list.length;al++){
+	var current_roid=alt_table_data.roid_list[al],
+		tbl_row=[];
+}
+*/
+var current_roid=alt_table_data.roid_list[0];
+
+	
+				var _tmp=[current_roid],
+					out_data=[];//{'row':current_roid,'meta':altTableObj.cell_schema}
+console.log('--------------------',"\n\n",'alt_table_data: ',alt_table_data);
 				for(var i=0;i<alt_table_data.cols_info.length;i++){
+console.log('alt_table_data.cols_info['+i+']: ',alt_table_data.cols_info[i],' current_roid: ',current_roid,' alt_table_data.cols_info[i].body_ident: ',alt_table_data.cols_info[i].body_ident);
 					var planet_data={};
 					kspUniObj.is_celestial_body(alt_table_data.cols_info[i].body_ident,planet_data);
 					var sci_data_obj={},
 						is_sci=kspSciObj.is_science(alt_science_arr[alt_science_inc].ident,sci_data_obj),
-						user_sci=array_object_search(page_data.parsed_science,'planet_ident',planet_data.ident),
 						extra_rail=[],
 						t_rail=[];
+//console.log('===============FIX USER SCI ARRAY - INCLUDE FLEXIBILITY TO EXPAND OTHER EXPERIMENTS IN THE FUTURE===============');
+					if(alt_science_arr[alt_science_inc].ident==asteroid_sample_ident){
+						var user_sci=array_object_search(array_object_search(alt_sci_list,{'meta':{'asteroid_ident':current_roid}},current_roid),'planet_ident',planet_data.ident);
+					}else{
+						var user_sci=alt_sci_list;}
 
 					//var new_arr=build_td_vals(planet_data,t_rail.concat(extra_rail),planet_data.biomes,science_arr,user_sci);
-					var new_arr=build_td_vals(planet_data, [alt_table_data.cols_info[i].rail], planet_data.biomes, alt_science_arr, user_sci);
+					var new_arr=build_td_vals(planet_data, [alt_table_data.cols_info[i].rail], (alt_table_data.cols_info[i].biome!==false?[alt_table_data.cols_info[i].biome]:[]), alt_science_arr, user_sci);
 					if(new_arr.length>0){
-console.log('new_arr('+planet_data.ident+','+alt_table_data.cols_info[i].rail+'): ',new_arr);
-console.log('----------chop off the first 3 of all arrays!');
+console.log('new_arr('+planet_data.ident+','+alt_table_data.cols_info[i].rail+'): ',new_arr,'user_sci['+planet_data.ident+']',user_sci);
 						for(var m=0;m<new_arr.length;m++){
 							var new_row=new_arr[m].row.slice(3),
 								new_meta=new_arr[m].meta,
-								display_roid_name='name--==';
-							new_row=[].concat([display_roid_name],new_row);
+								display_roid_name=current_roid;
+//new_row=[].concat([display_roid_name],new_row);
 							for(var nm in new_meta){if(bdcheck_key(new_meta,nm) && new_meta[nm] instanceof Array){
 								new_meta[nm]=new_meta[nm].slice(3);
-								new_meta[nm]=[].concat(display_roid_name,new_meta[nm]);
+//new_meta[nm]=[].concat(display_roid_name,new_meta[nm]);
 							}}
+							out_data.push({'row':new_row[0],'meta':new_meta});
 console.log('-----new_row: ',new_row,'new_meta',new_meta);
 							altTableObj.add_line(new_row, new_meta);
 						}
-					}
+					}else{
+						out_data.push({'row':0, 'meta':altTableObj.cell_schema});}
+console.log('out_data: ',out_data);
 					_tmp.push(
 						'PLANET: '+(alt_table_data.cols_info[i].body_ident!==false?alt_table_data.cols_info[i].body_ident:'false')+'<BR>'+
 						'RAIL: '+(alt_table_data.cols_info[i].rail!==false?alt_table_data.cols_info[i].rail:'false')+'<BR>'+
-						'BIOME: '+(alt_table_data.cols_info[i].biome!==false?alt_table_data.cols_info[i].biome:'false')
+						'BIOME: '+(alt_table_data.cols_info[i].biome!==false?alt_table_data.cols_info[i].biome:'false')+'<BR><BR>'+
+						'<div>'+out_data[i].row+'</div>'
 					);
 				}
 				altTableObj.add_line(_tmp);
+				var out_line=[],
+					out_meta={};
+				for(var o=0;o<out_data.length;o++){
+					out_line.push(out_data[o].row);
+console.log('out_data['+o+'].meta: ',out_data[o].meta);
+					for(var cs in altTableObj.cell_schema){
+						if(bdcheck_key(altTableObj.cell_schema,cs)){
+							if(typeof(out_meta[cs])=='undefined'){out_meta[cs]=[];}
+							out_meta[cs].push((bdcheck_key(out_data[o].meta,cs)?out_data[o].meta[cs]:''));}}
+				}
+console.log('out_line: ',out_line,' out_meta: ',out_meta);
+				//altTableObj.add_line(out_line,out_meta);
+
 
 				var _tmp='';
 				for(var k in alt_science_arr[alt_science_inc]){
@@ -757,7 +801,7 @@ console.log('-----new_row: ',new_row,'new_meta',new_meta);
 
 
 
-				if(1==2){
+				if(1==2){//old reference output
 					var planet_data={};
 					kspUniObj.is_celestial_body(celestial_body_arr[alt_science_inc],planet_data);
 					var rail_rules=kspUniObj.get_rail_rules(planet_data.body_type),
@@ -1015,7 +1059,7 @@ console.log('captured_sci_ids',captured_sci_ids,
 				FPSObj.remove_callback(chunk_tick);
 				FPSObj.add_once_callback(function(){
 					setTimeout(function(){
-						FPSObj.change_fps(5);//revert
+						FPSObj.change_fps(base_fps);//revert
 						on_captured_science(page_data.parsed_science);
 					},base_delay*0.35);//1/3 of base delay the user has already seen this message
 				});
