Missed a console.log()

--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
 					var rail_span=0,
 						biome_span=0;
 					context_data.body_ident=celestial_body_arr[b];//push_context_data();
-console.log('planet_data',planet_data,"\n\n",'sci_rails',$.extend(true,{},sci_rails),"\n\n",'rail_arr_keys: ',rail_arr_keys);
+//console.log('planet_data',planet_data,"\n\n",'sci_rails',$.extend(true,{},sci_rails),"\n\n",'rail_arr_keys: ',rail_arr_keys);
 
 					if((grouped_rail_context[0]===false && grouped_rail_context.length==1)){
 						//do nothing
